# GP

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
src/: CGOptimizer.cc  CGOptimizer.h  GP.cc  GP.h  KernelFunction.cc  KernelFunction.h  MeanFunction.cc  MeanFunction.h  SConstruct  SPGP.cc  SPGP.h  armadillo_backsub.cc  armadillo_backsub.h  myTypes.h  test.cc  test_spgp.cc
